migrate to moddevgradle legacy (instead of forgegradle)